asg.tf
resource "aws_launch_template" "app" {
    name_prefix = "app-launch-template"
    image_id = var.ami_id
    instance_type = var.instance_type

    vpc_security_group_ids = [
        aws_security_group.app_sg.id,
        aws_security_group.allow_ssh.id
    ]

    user_data = filebase64("${path.module}/scripts/user_data.sh")

    metadata_options {
      http_endpoint = "enabled"
      http_tokens = "required"
      http_put_response_hop_limit = 1
    }

    monitoring {
      enabled = true
    }

    tag_specifications {
      resource_type = "instance"
      tags = {
        Name = "app-instance"
      }
    }
}

resource "aws_autoscaling_group" "app_asg" {
    name = "app-asg"
    min_size = var.min_size
    max_size = var.max_size
    desired_capacity = var.desired_capacity
    vpc_zone_identifier = aws_subnet.private[*].id
    target_group_arns = [aws_lb_target_group.app_tg.arn]
    health_check_type = "ELB"
    health_check_grace_period = 300
    
    launch_template {
      id = aws_launch_template.app.id
      version = "$Latest"
    }
     
    tag {
      key = "Name"
      value = "app-instance"
      propagate_at_launch = true
    }
} 

resource "aws_autoscaling_policy" "scale-out" {
    name = "scale-out"
    scaling_adjustment = 1
    adjustment_type = "ChangeInCapacity"
    cooldown = 300
    autoscaling_group_name = aws_autoscaling_group.app_asg.name
}

resource "aws_autoscaling_policy" "scale-in" {
    name = "scale-in"
    scaling_adjustment = -1
    adjustment_type = "ChangeInCapacity"
    cooldown = 300
    autoscaling_group_name = aws_autoscaling_group.app_asg.name 
}

resource "aws_autoscaling_policy" "target_tracking" {
    name = "target-tracking-policy"
    autoscaling_group_name = aws_autoscaling_group.app_asg.name
    policy_type = "TargetTrackingScaling"

    target_tracking_configuration { 
      target_value = 70.0
      predefined_metric_specification {
        predefined_metric_type = "ASGAverageCPUUtilization"
      }
    }
  
}

# Cloudwatch alarm for the High CPU
resource "aws_cloudwatch_metric_alarm" "high_cpu" {
    alarm_name = "high-cpu-utilization"
    comparison_operator = "GreaterThanThreshold"
    evaluation_periods = "2"
    metric_name = "CPUUtilization"
    namespace = "AWS/EC2"
    period = "60"
    statistic = "Average"
    threshold = "80"
    alarm_actions = [aws_autoscaling_policy.scale-out.arn]
    
    dimensions = {
      AutoScalingGroupName = aws_autoscaling_group.app_asg.name
    } 
    
    tags = {
      Name = "high-cpu-utilization"
    }
}

# Cloudwatch alarm for the Low CPU
resource "aws_cloudwatch_metric_alarm" "low_cpu" {
    alarm_name = "low-cpu-utilization"
    comparison_operator = "LessThanThreshold"
    evaluation_periods = "2"
    metric_name = "CPUUtilization"
    namespace = "AWS/EC2"
    period = "120"
    statistic = "Average"
    threshold = "20"
    alarm_description = "This metric monitors ec2 cpu utilization"
    alarm_actions = [aws_autoscaling_policy.scale-in.arn]

    dimensions = {
       AutoScalingGroupName = aws_autoscaling_group.app_asg.name
    }

}
